Add grey button effect for new book modal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     </div>
     <dialog id="newBookModal">
-        <form method="dialog" id="addBookForm">
+        <form method="dialog" id="newBookForm">
             <button id="closeDialog" type="button">x</button>
             <div>
                 <label for="bookTitle">title:</label>
@@ -48,7 +48,7 @@
                 </div>
             </fieldset>
             <button id="shelveBook" type="submit">shelve</button>
-            <button id="reviewButton" class="form-btn" type="button">review?</button>
+            <button id="reviewButton" class="form-btn" type="button" disabled>review?</button>
         </form>
     </dialog>
 
