Complete first version of js functionaly

--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
         <button id="closeDialog" type="button">x</button>
         <form method="dialog" id="reviewForm" name="reviewForm">
             <label for>thoughts?</label>
-            <textarea id="reviewTextArea" rows="15" cols="65" name="reviewForm"></textarea>
+            <textarea id="reviewTextArea" rows="30vh" cols="100vw" name="reviewForm"></textarea>
             <button id="logReviewButton" class="form-btn" type="submit">log</button>
         </form>
+    </dialog>
+
+    <dialog id="fullBookCardModal">
+        <button id="closeDialog" type="button">x</button>
     </dialog>
 
 </body>
