--- a/index.html
+++ b/index.html
@@ -11,11 +11,35 @@
 </head>
 
 <body>
-    <header>nook</header>
-    <div id="nook">
-
+    <header>
+        <div class="title-container">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 55 100" x="0" y="0" fill="white">
+                <title>Library</title>
+                <g>
+                    <path
+                        d="M2,63H30a1,1,0,0,0,1-1V11.29L47.59,62.34a1,1,0,0,0,.5.58.88.88,0,0,0,.45.11.81.81,0,0,0,.31-.05l13.32-4.32a1,1,0,0,0,.64-1.26l-3-9.18h0L46.53,7.29h0L44.72,1.72a1,1,0,0,0-1.26-.64L31,5.13V2a1,1,0,0,0-1-1H2A1,1,0,0,0,1,2V62A1,1,0,0,0,2,63ZM3,12.92H15V51.14H3Zm14,0H29V51.14H17ZM15,53.14V55H3V53.14Zm2,0H29V55H17ZM29,10.92H17V9H29Zm-14,0H3V9H15ZM3,57H15v4H3Zm14,4V57H29v4ZM57.61,47.89,46.2,51.59,34.69,16.18l11.42-3.71Zm1.18,3.61L47.37,55.2l-.55-1.7,11.41-3.71ZM45.49,10.57,34.08,14.28l-.56-1.71L44.93,8.86Zm3.69,50.2L48,57.11,59.4,53.4l1.2,3.66ZM43.12,3.29,44.32,7,32.9,10.67,31.71,7ZM29,7H17V3H29ZM15,3V7H3V3Z" />
+                    <path d="M8.53,20.53a1,1,0,0,0-1,1v21a1,1,0,0,0,2,0v-21A1,1,0,0,0,8.53,20.53Z" />
+                    <path d="M22.53,20.53a1,1,0,0,0-1,1v21a1,1,0,0,0,2,0v-21A1,1,0,0,0,22.53,20.53Z" />
+                    <path
+                        d="M41.59,22.74l6.33,19.49a1,1,0,0,0,1,.69.87.87,0,0,0,.31-.05,1,1,0,0,0,.64-1.26L43.5,22.12a1,1,0,0,0-1.91.62Z" />
+                </g>
+            </svg>
+            nook
+        </div>
+        <div class="btn-container">
+            <button id="newBookButton" type="button">
+                <svg width="50px" height="50px" viewBox="0 0 1024 1024" class="icon" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path d="M473.6 473.6V64h76.8v409.6H960v76.8H550.4V960H473.6V550.4H64V473.6h409.6z"
+                        fill="#000000" />
+                </svg>
+                <div class="overlay-A"></div>
+            </button>
+        </div>
+    </header>
+    <div class="app-container">
+        <div id="nook"></div>
     </div>
-    <button id="newBookButton" type="button">+</button>
     <dialog id="newBookModal">
         <form method="dialog" id="newBookForm">
             <button id="closeDialog" type="button">x</button>
