Add classes to dialog html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="app-container">
         <div id="nook"></div>
     </div>
-    <dialog id="newBookModal">
-        <form method="dialog" id="newBookForm">
+    <dialog id="newBookModal" class="modalBookForm">
+        <form method="dialog" id="newBookForm" class="bookForm">
             <button id="closeDialog" type="button">x</button>
             <div>
                 <label for="bookTitle">title:</label>
@@ -77,8 +77,8 @@
         </form>
     </dialog>
 
-    <dialog id="editBookModal">
-        <form method="dialog" id="editBookForm">
+    <dialog id="editBookModal" class="modaBookForm">
+        <form method="dialog" id="editBookForm" class="bookForm">
             <button id="closeDialog" type="button">x</button>
             <div>
                 <label for="bookTitle">title:</label>
