Add html for footer including text and github link

--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
         <button id="closeDialog" type="button">x</button>
     </dialog>
 
+    <footer>
+        a tem production
+        <a href="http://https://github.com/toduyemi/nook">
+            <img src="./assets/icons/github-mark-white.png" alt="Github icon outline of a cat">
+        </a>
+    </footer>
+
 </body>
 
 </html>
