--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
     </dialog>
 
     <footer>
-        a tem production
-        <a href="http://https://github.com/toduyemi/nook">
+        a tem production&emsp;
+
+        <a href="https://github.com/toduyemi/nook" target="_blank" rel="noopener noreferrer">
             <img src="./assets/icons/github-mark-white.png" alt="Github icon outline of a cat">
         </a>
     </footer>
