Change links back

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         a tem production&emsp;
 
         <a href="https://github.com/toduyemi/nook" target="_blank" rel="noopener noreferrer">
-            <img src="assets/icons/github-mark-white.png" alt="Github icon outline of a cat">
+            <img src="./assets/icons/github-mark-white.png" alt="Github icon outline of a cat">
         </a>
     </footer>
 
