--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./app.js" defer></script>
+    <script src="'./node_modules/reset-css/reset.css'"></script>
     <link rel="stylesheet" href="./style.css">
     <title>nook</title>
 </head>
